--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,18 @@
 <!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!DOCTYPE html>
+<html>
+<link rel="stylesheet" href="style.css">
+    <head>
+        <meta charset="utf-8">
+        <title>First html project</title>
+    </head>
+    <body>
+<div>
+    <div class="top">
+
+    </div>
+
+</div>
+
+    </body>
+</html>
