--- a/first/index.html
+++ b/first/index.html
@@ -1,8 +1,9 @@
 <!-- Put your HTML HERE, make sure to connect your style.css sheet -->
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="style.css">
     <head>
+        <link rel="stylesheet" href="style.css">
+
         <meta charset="utf-8">
         <title>First html project</title>
     </head>
@@ -11,6 +12,23 @@
     <div class="top">
 
     </div>
+
+    <div><span>
+        <div class="middle-side">
+        </div>
+
+        <div class="middle-middle">
+            <div class="middle-bottom">
+            </div>
+        </div>
+
+        <div class="middle-side">
+        </div>
+
+
+
+    </div></span>
+</div>
 
 </div>
 
