--- a/first/index.html
+++ b/first/index.html
@@ -1,36 +1,16 @@
-<!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
-
+        <link rel="stylesheet" href="index.css">
         <meta charset="utf-8">
-        <title>First html project</title>
+        <title>HTML First</title>
     </head>
     <body>
-<div>
-    <div class="top">
-
-    </div>
-
-    <div><span>
-        <div class="middle-side">
-        </div>
-
-        <div class="middle-middle">
-            <div class="middle-bottom">
-            </div>
-        </div>
-
-        <div class="middle-side">
-        </div>
-
-
-
-    </div></span>
-</div>
-
-</div>
-
+        <div class="top"></div>
+        <div class="mid"></div>
+        <div class="bot"></div>
     </body>
+
+
 </html>
