--- a/second/index.html
+++ b/second/index.html
@@ -1,25 +1,25 @@
+<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="index.css">
         <meta charset="utf-8">
-        <title></title>
+        <title>HTML Second</title>
     </head>
     <body>
-
-        <div>
-            <div class="left">
-
-            </div>
-
-            <div class="middle">
-
-            </div>
-
-            <div class="right">
-
-            </div>
+        <div class="box-top">
+            <div class="box1"></div>
+            <div class="box2"></div>
+            <div class="box3"></div>
 
         </div>
-
+        <div class="box-middle">
+            <div class="box4"></div>
+        </div>
+        <div class="box-bot">
+                <h1>HELLO</h1>
+                <h1>FRIENDS</h1>
+        </div>
     </body>
+
 </html>
